[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "databricks_clean_room_orchestrator"
version = "0.0.1"
authors = [
  { name="William Chau", email="william.chau@databricks.com" },
]
description = "Orchestrator client for clean rooms in Databricks workflows."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]

[project.urls]
"Homepage" = "https://github.com/wchau/clean-room-notebook"
"Bug Tracker" = "https://github.com/wchau/clean-room-notebook/issues"
